# gm-trello-mcp

./: .gitignore  AUTHENTICATION.md  CHANGELOG.md  CHECKPOINT_VERIFICATION.md  FUTURE_FEATURES.md  ORGANIZATIONS.md  POWER.md  README.md  RELEASING.md  SECURITY.md  SECURITY_AUDIT.md  STARTUP_FLOW.md  __init__.py  __main__.py  auth.py  mcp.json  pyproject.toml  quick-release.sh  release.sh  requirements.txt  server.py  setup.sh  test_auth.py  test_organizations.py  test_release.sh  verify_card_members.py
.kiro/hooks/: auto-commit-message.kiro.hook
.kiro/specs/board-members/: design.md  requirements.md  tasks.md
.kiro/specs/card-labels/: design.md  requirements.md  tasks.md
.kiro/specs/card-members/: design.md  requirements.md  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
docs/: AUTHENTICATION.md  README.md
powers/trello/: POWER.md  mcp.json
tests/: test_auth.py  test_organizations.py  verify_card_members.py
trello_mcp_server/: __main__.py  auth.py  server.py
